fix: stretch content on the 2560 breakpoint XER-117: 180

--- a/src/components/Main/Scroll/_scroll.scss
+++ b/src/components/Main/Scroll/_scroll.scss
@@ -9,20 +9,11 @@
 }
 
 .scroll-container {
-  height: 100%;
+  max-height: 100%;
   margin-right: -17px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
-
-// .scroll-container-mob {
-//   @media (max-width: 767px) {
-//     height: 100%;
-//     margin-right: -17px;
-//     overflow-y: scroll;
-//     overflow-x: hidden;
-//   }
-// }
 
 .scroll-component {
   position: absolute;
